	$Id$
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2011-08-15	pwessel
	GMT 5.0.0b finalized and released.
-----------------------------------------------------------------------------------------
2011-08-02	pwessel
	* gmt_fft.c:		Started groundwork to enable FFTW, Accelerate framework,
				Sun Performance library, and FFT Pack configurations.
	* gmt.conf:		New parameter GMT_FFT which selects what FFT implementation
				to use in programs like spectrum1d and grdfft.

2011-07-28	pwessel
	* gmt_support.c:	Pens like brown,- (i.e., no width) did not set the color.

2011-07-27	pwessel
	* gmt_io.c:		Ensure that comment records that are written always start with #

2011-07-27	remko
	* guru/svnclean.sh:	Renamed from cvsclean.sh and based on .svn directories
	* GNUmakefile, Makefile:	Replaced cvs traces by svn
	* pslib.c:		Use SVN revision number in psl_bulkcopy

2011-07-26	remko
	* doc/GMT_version.tex.in:	Added \GSHHSVERSION
-----------------------------------------------------------------------------------------
2011-07-24	pwessel
	Now under subversion control under repository name gmt5.  To check out a copy:
		svn checkout svn://pohaku.soest.hawaii.edu/gmt5 or, for a "trunkless" copy:
		svn checkout svn://pohaku.soest.hawaii.edu/gmt5/trunk gmt5
-----------------------------------------------------------------------------------------
2011-07-21	pwessel
	* project_func.c:	Fixed same bug as in GMT 4 and added test oblique.sh

2011-07-20	pwessel
	* fitcircle_func.c:	Had not implemented the fixed small circle -S<lat> solution.
				Added test example for fitcircle.

2011-07-19	pwessel
	* sph/*.[ch]:		Upgraded to be fully 64-bit compliant.
	* gmt*.c:		Make sure we don't pass ints to funcs expecting GMT_LONG.

2011-07-18	pwessel
	* gmtstitch_func.c:	Warn that segment with a single point will not connect both