@@ -109,6 +109,13 @@ GDAL_INC	= @GDAL_INC@
 GDAL_LIB	= @GDAL_LIB@
 #
 #-------------------------------------------------------------------------------
+#       Optional directives for PCRE includes and library
+#-------------------------------------------------------------------------------
+#
+PCRE_INC        = @PCRE_INC@
+PCRE_LIB        = @PCRE_LIB@
+#
+#-------------------------------------------------------------------------------
 #	Programs and other stuff added only for backward compatibility
 #-------------------------------------------------------------------------------
 #
