@@ -60,14 +60,15 @@ Do not write records that only contain NaNs in every field [Default writes all r
 OPT(Q)IT(seg)
 Only write segment number IT(seg) and skip all others.  Cannot be used with OPT(S).
 .TP
-OPT(S)[BD(~)]IT("search string")
+OPT(S)[BD(~)]IT("search string") or OPT(S)[BD(~)]IT("/regexp/")
 Only output those segments whose header record contains the specified text string.  To reverse the search,
 i.e., to output segments whose headers do IT(not) contain the specified pattern, use OPT(S~).
 Should your pattern happen to start with ~ you need to escape this character with a backslash \ [Default output all segments].
 Cannot be used with OPT(Q).  For matching segments based on aspatial values (via OGR/GMT format), give the
 search string as IT(varname)=IT(value) and we will compare IT(value) against the value of IT(varname) for
 each segment.  Note: If the features are polygons then a match of a particular polygon perimeter also means
-that any associated polygon holes will also be matched.
+that any associated polygon holes will also be matched.  For matching segment
+headers against extended regular expressions enclose the expression in slashes.
 .TP
 OPT(T)
 Suppress the writing of segment headers on output.
@@ -121,6 +122,12 @@ To extract all segments in the file big_file.d whose headers contain the string 
 .br
 .sp
 gmtconvert big_file.d -S"RIDGE AXIS" > subset.d
+.br
+.sp
+To invert the selection of segments whose headers begin with "profile " followed by an integer number and any letter between "g" and "l", try
+.br
+.sp
+gmtconvert -S~"/^profile [0-9]+[g-l]$/"
 .br
 .sp
 To reverse the order of segments in a file without reversing the order of records within each segment, try
